stop button from overlapping border

--- a/css/planner.css
+++ b/css/planner.css
@@ -25,8 +25,8 @@
 }
 .plannerAddButton {
 	position: absolute;
-	right: 0;
-	bottom: 0;
+	right: 1px;
+	bottom: 1px;
 	border-right: none;
 	border-bottom: none;
 	border-bottom-right-radius: 0;
